# lighthouse

./: .gitignore  CMakeLists.txt
device/: CMakeLists.txt  led-controller.py
device/src/: CMakeLists.txt  controller.pio  device.cpp
server/src/: CMakeLists.txt  app.cpp  server.cpp
src/: CMakeLists.txt  app.cpp
